[package]
name = "kiara"
version = "0.1.0"
edition = "2021"
authors = ["Nova King <technobaboo@proton.me>"]
description = "App shell for Niri, the infinite horizontal wayland compositor"
license = "MIT"
repository = "https://github.com/StardustXR/flatland/"
homepage = "https://stardustxr.org"

[dependencies]
glam = { version = "0.25", features = ["mint"] }
mint = "0.5.9"
manifest-dir-macros = "0.1.17"
lazy_static = "1.4.0"
tokio = { version = "1.28.0", features = ["full"] }
input-event-codes = "5.16.8"
rustc-hash = "1.1.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
color-eyre = "0.6.2"
colorgrad = "0.6.2"
map-range = "0.1.2"
clap = { version = "4.5.0", features = ["derive"] }

[dependencies.stardust-xr-fusion]
git = "https://github.com/StardustXR/core.git"
branch = "dev"

[dependencies.stardust-xr-molecules]
git = "https://github.com/StardustXR/molecules.git"
branch = "dev"
